Add template form -contact-form with validation

--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -7,3 +7,6 @@
 <h1 [hidden]="Courses.length !== 0">No Courses Listed</h1>
 </div>
 <input type="text"  [appLogging]= "3" >
+<div class="container">
+  <app-contact-form></app-contact-form>
+</div>
