Add reactive form

--- a/src/app/course-list/course-list.component.html
+++ b/src/app/course-list/course-list.component.html
@@ -9,4 +9,6 @@
 <input type="text"  [appLogging]= "3" >
 <div class="container">
   <app-contact-form></app-contact-form>
+  <br/>
+  <app-singup-form></app-singup-form>
 </div>
